...
	enum NotificationSettings {
		enum DeltaOnboarding {
			static let imageOn = "AppStrings.NotificationSettings.imageDescriptionOn"
			static let imageOff = "AppStrings.NotificationSettings.imageDescriptionOff"
			static let description = "AppStrings.NotificationSettings.DeltaOnboarding.description"
		}
		static let notifications = "AppStrings.NotificationSettings.notifications"
...
		static let bulletDesc2 = "AppStrings.NotificationSettings.bulletDesc2"
		
		static let openSystemSettings = "AppStrings.NotificationSettings.openSystemSettings"
		static let close = "AppStrings.NotificationSettings.DeltaOnboarding.primaryButtonTitle"
	}
	
	enum Home {
		static let leftBarButtonDescription = "AppStrings.Home.leftBarButtonDescription"
		static let rightBarButtonDescription = "AppStrings.Home.rightBarButtonDescription"
		static let activateCardOnTitle = "AppStrings.Home.activateCardOnTitle"
		static let activateCardOffTitle = "AppStrings.Home.activateCardOffTitle"
		static let activateCardBluetoothOffTitle = "AppStrings.Home.activateCardBluetoothOffTitle"
		static let riskCardIntervalUpdateTitle = "AppStrings.Home.riskCardIntervalUpdateTitle"
...
		enum RiskTableViewCell {
			enum LowRisk {
				static let title = "AccessibilityIdentifiers.Home.RiskTableViewCell.LowRiskTitle"
				static let noExposuresLabel = "AccessibilityIdentifiers.Home.RiskTableViewCell.NoExposuresLabel"
				static let installedLabel = "AccessibilityIdentifiers.Home.RiskTableViewCell.InstalledLabel"
...
			static let inactiveRiskTitle = "AccessibilityIdentifiers.Home.RiskTableViewCell.InactiveRiskTitle"
			
			static let topContainer = "[AccessibilityIdentifiers.Home.RiskTableViewCell.topContainer]"
			static let bodyLabel = "HomeRiskTableViewCell.bodyLabel"
			static let updateButton = "HomeRiskTableViewCell.updateButton"
...
			static let titleLabel = "AppStrings.Home.TestRegistrationCell.titleLabel"
			static let descriptionLabel = "AppStrings.Home.TestRegistrationCell.descriptionLabel"
			static let submitCardButton = "AppStrings.Home.TestRegistrationCell.submitCardButton"
		}
		
...
		static let onboardingInfo_togetherAgainstCoronaPage_title = "AppStrings.Onboarding.onboardingInfo_togetherAgainstCoronaPage_title"
		static let onboardingInfo_togetherAgainstCoronaPage_imageDescription = "AppStrings.Onboarding.onboardingInfo_togetherAgainstCoronaPage_imageDescription"
		static let onboardingLetsGo = "AppStrings.Onboarding.onboardingLetsGo"
		static let onboardingInfo_privacyPage_title = "AppStrings.Onboarding.onboardingInfo_privacyPage_title"
		static let onboardingInfo_privacyPage_imageDescription = "AppStrings.Onboarding.onboardingInfo_privacyPage_imageDescription"
		static let onboardingContinue = "AppStrings.Onboarding.onboardingContinue"
		static let onboardingInfo_enableLoggingOfContactsPage_button = "AppStrings.Onboarding.onboardingInfo_enableLoggingOfContactsPage_button"
		static let onboardingDoNotActivate = "AppStrings.Onboarding.onboardingDoNotActivate"
		static let onboardingInfo_howDoesDataExchangeWorkPage_title = "AppStrings.Onboarding.onboardingInfo_howDoesDataExchangeWorkPage_title"
...
	
	enum Settings {
		static let tracingLabel = "AppStrings.Settings.tracingLabel"
		static let notificationLabel = "AppStrings.Settings.notificationLabel"
		static let backgroundAppRefreshLabel = "AppStrings.Settings.backgroundAppRefreshLabel"
		static let resetLabel = "AppStrings.Settings.resetLabel"
		static let backgroundAppRefreshImageDescription = "AppStrings.Settings.backgroundAppRefreshImageDescription"
		static let dataDonation = "AppStrings.Settings.Datadonation.description"
	}
	
...
		static let infectionRiskExplanationSection = "AppStrings.ExposureDetection.infectionRiskExplanationSection"
		
		static let surveyCardCell = "AppStrings.ExposureDetection.surveyCardCell"
		static let surveyCardButton = "AppStrings.ExposureDetection.surveyCardButton"
		static let surveyStartButton = "AppStrings.ExposureDetection.surveyStartButton"
...
	
	enum SurveyConsent {
		static let acceptButton = "AppStrings.SurveyConsent.acceptButton"
		static let titleImage = "AppStrings.SurveyConsent.titleImage"
		static let title = "AppStrings.SurveyConsent.title"
...

	enum SRSConsentScreen {
		static let primaryButton = "AppStrings.SRSConsentScreen.primaryButton"
		static let secondaryButton = "AppStrings.SRSConsentScreen.secondaryButton"
		static let accImageDescription = "AppStrings.SRSConsentScreen.accImageDescription"
...
		static let sectionHeadline = "AppStrings.ExposureSubmission_DispatchSectionHeadline"
		static let sectionHeadline2 = "AppStrings.ExposureSubmission_DispatchSectionHeadline2"
		static let qrCodeButtonDescription = "AppStrings.ExposureSubmissionDispatch.qrCodeButtonDescription"
		static let positiveSelfTestButtonDescription = "AppStrings.ExposureSubmissionDispatch.positiveSelfTestButtonDescription"
		static let tanInputView = "AppStrings.ExposureSubmissionDispatch.TaninputView"
...
	
	enum DeltaOnboarding {
		static let accImageDescription = "AppStrings.DeltaOnboarding.accImageLabel"
		static let newVersionFeaturesAccImageDescription = "AppStrings.DeltaOnboarding.newVersionFeaturesAccImageLabel"
		static let newVersionFeaturesGeneralDescription = "AppStrings.DeltaOnboarding.NewVersionFeatures.GeneralDescription"
		static let newVersionFeaturesGeneralAboutAppInformation = "AppStrings.DeltaOnboarding.NewVersionFeatures.AboutAppInformation"
...
		static let imageDescription = "AppStrings.ExposureSubmissionWarnEuropeConsent.imageDescription"
		static let sectionTitle = "AppStrings.ExposureSubmissionWarnEuropeConsent.sectionTitle"
		static let consentSwitch = "AppStrings.ExposureSubmissionWarnEuropeConsent.consentSwitch"
	}
	
...
	
	enum AccessibilityLabel {
		static let close = "AppStrings.AccessibilityLabel.close"
	}
	
...
		static let image = "ExposureSubmissionIntroViewController.image"
		
		static let primaryFooterButton = "General.primaryFooterButton"
		static let secondaryFooterButton = "General.secondaryFooterButton"
		static let cancelButton = "General.cancelButton"
...
		static let accSubHeadAgeGroup = "AppStrings.DataDonation.Info.subHeadAgeGroup"
		static let consentSwitch = "DataDonation.Consent.Switch"
		static let federalStateName = "AppStrings.DataDonation.Info.noSelectionState"
		static let regionName = "AppStrings.DataDonation.Info.noSelectionRegion"
		static let ageGroup = "AppStrings.DataDonation.Info.noSelectionAgeGroup"
		static let federalStateCell = "DataDonation.FederalState.Identifier"
		static let regionCell = "DataDonation.Region.Identifier"
		static let ageGroupCell = "DataDonation.AgeGroup.Identifier"
	}

...
